[package]
name = "net-types-macros"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
proc-macro = true
path = "../net-types/src/macros.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.49"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["extra-traits"] }
