[package]
name = "net-types"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = "0.7.0-alpha.2"
net-types-macros = { path = "../net-types-macros" }

[features]
default = ["std"]
std = []
