[package]
name = "net-types"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = { version = "0.8.0-alpha.2", features = ["derive"] }
net-types-macros = { path = "../net-types-macros" }

[features]
default = ["std"]
std = []

[dev-dependencies]
test-case = "3.3.1"
