[package]
name = "packet-formats"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
explicit = { path = "../explicit" }
fakestd = { path = "../fakestd" }
internet-checksum = "0.2.1"
log = "0.4.14"
net-types = { path = "../net-types" }
nonzero_ext = "0.3.0"
packet = { path = "../packet" }
thiserror = "1.0.30"
zerocopy = "0.7.0-alpha.2"

[dev-dependencies]
assert_matches = "1.5.0"
test-case = "1.2.1"
