[package]
name = "packet"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
nonzero_ext = "0.3.0"
zerocopy = "0.6.1"

[dev-dependencies]
matches = "0.1.9"
rand = "0.8.4"
