[package]
name = "packet"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
nonzero_ext = "0.3.0"
test-case = "2.2.2"
zerocopy = { version = "0.8.0-alpha.2", features = ["derive"] }
const-unwrap = { path = "../const-unwrap" }

[dev-dependencies]
assert_matches = "1.5.0"
matches = "0.1.9"
rand = "0.8.4"
